Fix background image on mobile view

--- a/builds/development/css/responsive-full-background-image.css
+++ b/builds/development/css/responsive-full-background-image.css
@@ -2,7 +2,7 @@
 */
 body {
   /* Location of the image */
-  background-image: url(https://imo.im/s/assets/start/backgrounds/background-2.55e4c7bc.jpg);
+  background-image: url(../images/background-photo.jpg);
   
   /* Image is centered vertically and horizontally at all times */
   background-position: center center;
@@ -30,6 +30,6 @@ body {
   body {
     /* The file size of this background image is 93% smaller
      * to improve page load speed on mobile internet connections */
-    background-image: url(https://imo.im/s/assets/start/backgrounds/background-2.55e4c7bc.jpg);
+    background-image: url(../images/background-photo-mobile-devices.jpg);
   }
 	}
