--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -1,7 +1,12 @@
 /* Space out content a bit */
+html, body, .container {
+  height: 100%;
+}
+
 body {
   padding-top: 70px;
   font-family: Amaranth;
+  max-width: 2000px;
 }
 
 .onBackground {
